--- a/main.html
+++ b/main.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styled Webpage</title>
+    <style>
+        :root {
+            background-color: rgb(135, 206, 235);
+        }
+        body {
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+        article p:first-child {
+            background-color: black;
+            color: white;
+            padding: 10px;
+        }
+        article p:nth-child(2) {
+            padding: 10px;
+        }
+        article p:last-child {
+            color: red;
+            padding: 10px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            background-color: gray;
+            width: 50%;
+            padding: 10px;
+        }
+        ul li:nth-child(odd) {
+            background-color: white;
+        }
+        ul li:first-child,
+        ul li:last-child {
+            font-size: 22px;
+        }
+        ul li:nth-last-child(3) {
+            background-color: pink;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <article>
+        <p>First paragraph with white text on a black background.</p>
+        <p>Second paragraph with standard text color.</p>
+        <p>Third paragraph with red text.</p>
+    </article>
+    <ul>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>Fourth item</li>
+        <li>Fifth item</li>
+    </ul>
 </body>
-
 </html>
